welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:10: error: not found: value biscuitla
        biscuitla = true
        ^